wflow_publish(c("analysis/*Rmd"))

--- a/analysis/about.Rmd
+++ b/analysis/about.Rmd
@@ -7,4 +7,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-Describe your project.
+This website was created using the [workflowr](https://github.com/jdblischak/workflowr) R package. It is simply a demo created during a tutorial given at a Baltimore R-Ladies meet-up. More info:
+
+* [Slides](https://docs.google.com/presentation/d/1opTQXesRyQkiJrpIcsJNsbnlnvYAddv0G7_D9dGX434/edit#slide=id.g8c023f9a4a_0_26) 
+* Presenters: Inger Fabris-Rotelli & Vebashini Naidoo
